<resources>
    <string name="app_name">MelapelApp</string>
    <string name="action_settings">Settings</string>
    <string name="store_name">Store name</string>
    <string name="contact_email">Contact email</string>
    <string name="contact_password">Password</string>

    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Zip code</string>
    <string name="phone">Phone</string>

    <string name="loading_userdata">Retrieving data...</string>
    <string name="creating_account">Creating Account...</string>
    <string name="signup_failure">Signup failed</string>

    <string name="no_address_found">Could not get address from location</string>
</resources>
